sandbox/output
Customer.java:33: error: incompatible types: String cannot be converted to int
        hashValue = 31 * hashValue + name; 
                                   ^
Customer.java:34: error: incompatible types: String cannot be converted to int
        hashValue = 31 * hashValue + id; 
                                   ^
2 errors
